--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,28 +47,110 @@ main {
     width: 80%;
     border-right: 1px solid $gray;
     border-top: 1px solid $gray;
-    tr {
+    .tr {
+      display: flex;
+
       &.active {
         background: $blue;
         color:white;
       }
-      th {
+      .th {
         border-left: 1px solid $gray;
         border-bottom: 1px solid $gray;
         background: $gray-backg;
         padding: 10px;
+        &:nth-of-type(1) {
+          width: 20%;
+        }
+        &:nth-of-type(2) {
+          width: 20%;
+        }
+        &:nth-of-type(3) {
+          width: 60%;
+        }
       }
-     td {
+     .td {
         border-left: 1px solid $gray;
        border-bottom: 1px solid $gray;
        padding: 10px;
+       input {
+         width: 100%;
+         height: 100%;
+         border:none;
+         &:last-of-type {
+           width: 75%;
+         }
+       }
+
+       .delete, .update {
+         float: right;
+         padding: 0;
+         margin: 0;
+         padding-left: 10px;
+         cursor: pointer;
+         transition: .3s;
+         background: none;
+         color: black;
+
+       }
+       .delete:hover {
+         color: red;
+         transition: .3s;
+       }
+       .update:hover {
+         color:#00bf00;
+         transition: .3s;
+       }
        &:nth-of-type(1) {
          width: 20%;
        }
        &:nth-of-type(2) {
          width: 20%;
        }
+       &:nth-of-type(3) {
+         width: 60%;
+       }
       }
+    }
+    .tr.edit {
+      border: 2px solid #22d702;
+      .td {
+        border: none;
+        box-shadow: 0px 0px 0px 1px #22d702;
+      }
+
+    }
+  }
+  button {
+    display: block;
+    padding: 10px 20px;
+    background: $blue;
+    border: none;
+    font-size: 20px;
+    color: white;
+    margin: 20px auto;
+
+  }
+  .add-form {
+    max-width: 400px;
+    margin: 20px auto;
+    input {
+      width:49%;
+      display: inline-block;
+      padding: 10px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+      &:last-of-type {
+        float: right;
+      }
+    }
+    textarea {
+      width: 100%;
+      margin-top: 10px;
+      padding: 10px;
+      height: 100px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
     }
   }
 }
