--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@ strong {
   padding:0;
   box-sizing: border-box;
 }
+
 $gray: #cacaca;
 $gray-backg: #ebebeb;
 $blue: #0ec0ce;
@@ -132,16 +133,16 @@ main {
 
   }
   .add-form {
-    max-width: 400px;
+    max-width: 300px;
     margin: 20px auto;
     input {
-      width:49%;
+      //width:50%;
       display: inline-block;
       padding: 10px;
       font-family: 'Roboto', sans-serif;
       font-size: 16px;
       &:last-of-type {
-        float: right;
+        //float: right;
       }
     }
     textarea {
@@ -153,4 +154,28 @@ main {
       font-size: 16px;
     }
   }
+}
+.timePicker {
+  max-width: 100%;
+  width: 600px;
+}
+.uib-time input {
+  margin: 5px 5px;
+}
+.startTime, .endTime {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  >div {
+    width: 50%;
+  }
+  .name {
+    padding: 0 20px;
+  }
+}
+td.uib-increment, .text-center {
+  display: none;
+}
+.uib-time input{
+  width: 60px;
 }
